# localAssistant

./: .gitignore  AGENT_PROMPT.md  CLAUDE.md  Makefile  TASKS.md  build-plugin.sh
.claude/: settings.local.json
First Objective/: OLIV4600_SRS_v2.0.docx
First Objective/dashboard_home/: code.html
First Objective/document_analysis/: code.html
First Objective/document_chat/: code.html
First Objective/olivetti_modernist/: DESIGN.md
First Objective/production_pipeline/: code.html
First Objective/summaries_advanced/: code.html
First Objective/workspace_core/: code.html
plugins/: INNOVADEF_Kit_Comunicacion_2026.docx
plugins/oliv4600-pack/: Cargo.toml  Trunk.toml  index.html  plugin.json
plugins/oliv4600-pack/src/: file_browser.rs  lib.rs
plugins/oliv4600-pack/translations/: en.json  es.json
scripts/: build-icon.sh  make-icon.py  package-linux.sh  package-macos.sh
server/: Cargo.toml
server/scripts/: make_docx.js  package-lock.json  package.json
server/src/: config.rs  db.rs  main.rs
server/src/routes/: analyse.rs  audit.rs  autostart.rs  browse.rs  chat.rs  crisis.rs  download.rs  extract.rs  history.rs  kiosk.rs  mod.rs  plugin_db.rs  publication.rs  readability.rs  render.rs  render_docx.rs  render_pdf.rs  settings.rs  static_files.rs  transform.rs  transformations.rs  verify.rs  workspace.rs
server/src/tools/: files.rs  mod.rs  readability.rs
src/: config.rs  main.rs
src/routes/: chat.rs  export.rs  mod.rs  plugins.rs  transform.rs  upload.rs
src/tools/: shell.rs
web-app/: Cargo.toml  Trunk.toml  index.html
web-app/src/: bridge.rs  chat.rs  config_panel.rs  file_browser.rs  kiosk_exit.rs  lib.rs  shell.rs
web-app/src/plugins/: mod.rs
web-app/static/fonts/: material-symbols.css
