[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "EventSource", "EventTarget", "Event",
    "Request", "RequestInit", "RequestMode", "Response",
    "Headers", "ReadableStream", "ReadableStreamDefaultReader",
    "console", "ScrollIntoViewOptions", "ScrollBehavior",
    "DragEvent", "DataTransfer", "FileList", "File", "Blob", "FormData",
    "HtmlInputElement", "KeyboardEvent",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1