[package]
name = "oliv4600-pack"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "BlobPropertyBag",
  "Clipboard",
  "console",
  "DataTransfer",
  "Document",
  "DragEvent",
  "Element",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "FormData",
  "Headers",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "MouseEvent",
  "Navigator",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Url",
  "Window",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
